manifest/product-catalog/templates/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: product-catalog
  labels:
    app.kubernetes.io/name: product-catalog
    app.kubernetes.io/part-of: astronomy-shop
spec:
  replicas: 1
  strategy:
    canary:
      maxSurge: 1
      maxUnavailable: 0
      steps:
        - setWeight: 100
  selector:
    matchLabels:
      app.kubernetes.io/name: product-catalog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: product-catalog
        app.kubernetes.io/part-of: astronomy-shop
    spec:
      serviceAccountName: product-catalog
      containers:
        - name: product-catalog
          image: REPLACE_ME/product-catalog:REPLACE_ME
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
