manifest/product-catalog/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  labels:
    app.kubernetes.io/name: product-catalog
    app.kubernetes.io/part-of: astronomy-shop
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: product-catalog
  ports:
    - name: http
      port: 8080
      targetPort: http
