manifest/product-catalog/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: product-catalog
  labels:
    app.kubernetes.io/name: product-catalog
    app.kubernetes.io/part-of: astronomy-shop
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: product-catalog
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: frontend
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: checkout
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: recommendation
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
